TestEclipse/src/objects/Media_Line_Item__c.object
<CustomObject>
    <description>Contains media purchased by a single customer and display it in his invoice statement.</description>
    <fields>
        <fullName>Media_Invoice_Statement__c</fullName>
        <description>Line item displays on media invoice statement.</description>
        <inlineHelpText>Select invoice statement.</inlineHelpText>
        <label>Media Invoice Statement</label>
        <referenceTo>Invoice_Statement_Media_Library__c</referenceTo>
        <relationshipLabel>Media Line Items</relationshipLabel>
        <relationshipName>Media_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Media_Name__c</fullName>
        <description>Display individual media name purchased by customer.</description>
        <inlineHelpText>Select media for purchase.</inlineHelpText>
        <label>Media Name</label>
        <referenceTo>Media_Inventory__c</referenceTo>
        <relationshipLabel>Media Line Items</relationshipLabel>
        <relationshipName>Media_Line_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity of media a customer want to purchase.</description>
        <inlineHelpText>Enter media quantity for purchase.</inlineHelpText>
        <label>Quantity</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Calculate total cost for purchased media.</description>
        <formula>Quantity__c  *  Media_Name__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Display cost of purchase of individual item.</inlineHelpText>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Individual media price.</description>
        <formula>Media_Name__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Media unit price.</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Media Line Item</label>
    <nameField>
        <displayFormat>LIN-{00000}</displayFormat>
        <label>Media Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>